k8s/40-tenants.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag
  namespace: tenant-a
spec:
  type: ClusterIP
  selector:
    app: rag
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag
  template:
    metadata:
      labels:
        app: rag
    spec:
      serviceAccountName: rag-sa
      nodeSelector:
        pool: apps
      containers:
        - name: rag
          image: sovereignragva8lut.azurecr.io/rag-service:v3
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m

# ---------------------------------------------------------------- tenant-b
---
apiVersion: v1
kind: Service
metadata:
  name: rag
  namespace: tenant-b
spec:
  type: ClusterIP
  selector:
    app: rag
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag
  namespace: tenant-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag
  template:
    metadata:
      labels:
        app: rag
    spec:
      serviceAccountName: rag-sa
      nodeSelector:
        pool: apps
      containers:
        - name: rag
          image: sovereignragva8lut.azurecr.io/rag-service:v3
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
